--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,10 @@ display: block;
     
 }
 
-
+input:focus{
+    outline: none;
+    
+}
 
 .form-range::-webkit-slider-thumb{
     -webkit-appearance: none;
@@ -55,6 +58,27 @@ display: block;
     background: white;
     box-shadow: -410px 0 0 400px white;
     cursor: pointer;
+}
+
+@keyframes spinner {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.loading-spinner {
+    width: 50px;
+    height: 50px;
+    border: 10px solid #f3f3f3;
+    /* Light grey */
+    border-top: 10px solid #383636;
+    /* Black */
+    border-radius: 50%;
+    animation: spinner 1.5s linear infinite;
 }
 
 @media screen and (width > 1440px) {
